Fixing character stuck with the bomb position and adding dead animation

--- a/styles/BackGroundGame.css
+++ b/styles/BackGroundGame.css
@@ -9,8 +9,8 @@ body {
 }
 
 canvas {
-  height: 750px;
-  width: 900px;
+  height: 900px;
+  width: 1300px;
 }
 
 #game {
